Fixed #BA3665
https://beyond-aion.com/forum/thread/3665-airbind-bei-schutzschild-assassin/

* Resisted magical auto attacks still applied one damage
* Shield effects did not block stun like effects (e.g., SignetBurst)
* Fixed critical effects could not be applied when ConvertHeal and MpShield effects were active (mainly affecting Aethertech)
* Fixed 'Absolute Zero' would cancel isUnderShield even if a normal shield, e.g., 'Stone Skin', would still be active